<resources>
    <string name="app_name">Kids Helper</string>
    <string name="app_name_fcm">KidsHelper</string>
    <string name="wiser_helper_app">Wiser Helper App</string>
    <string name="kid_helper_app">Kid Helper App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home_title_reminder">Reminder</string>
    <string name="rate_us">Rate us</string>
    <string name="spread_the_love">Spread the love</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="contact_uss">Contact Us</string>
    <string name="invite_wiser">Invite Wiser</string>
    <string name="invite_kid">Invite Kid</string>
    <string name="upgrade_helper">Upgrade Helper</string>
    <string name="new_wiser_invitation">New invitation</string>
    <string name="wiser_invite_body">You have received a wiser invite</string>
    <string name="wiser_invite">%s has invited you, please accept the invitation to help your Loved One.</string>
    <string name="wiser_has_updated_your_data">Wiser update</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="add_number">Add Number</string>
    <string name="add_email">Add Email</string>
    <string name="email_address">Email Address</string>
    <string name="add_remove_slides_desc">Get the experience of full customization</string>
    <string name="do_you_want_to_remove_the_slide">Do you want to remove the slide?</string>
    <string name="install">Install</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="on_wiser_device">on \n wiser device?</string>
    <string name="remove_a_slide_arent_affect_the_content"> (once removed, the content in Wiser will be permanently deleted)</string>
    <string name="logout_confirmation">Do you want to Logout?</string>
    <string name="yes_logout">YES, Logout</string>
    <string name="yes_install">YES, Install</string>
    <string name="my_wisers">My Wisers</string>
    <string name="helper_plus_menu">Helper PLUS Menu</string>
    <string name="companion_the_easy_way_to_support_a_smartphone_remotely">Wiser Helper, the easy way to support a smartphone, remotely!</string>
    <string name="kid_the_easy_way_to_support_a_smartphone_remotely">Kids Helper, the easy way to support a smartPhone, remotely!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="close">Close</string>
    <string name="send_email">Yes, Send Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="fetching_data">Fetching data</string>
    <string name="send_invite">Send Invite</string>
    <string name="close_help">Close Help</string>
    <string name="input_gmail_address">Enter email to invite wiser</string>
    <string name="want_help_regarding_invite">Want help regarding invite?</string>
    <string name="want_help_1">1) Make sure the Wiser app has been downloaded and installed on the Wiser phone.</string>
    <string name="want_help_2">2) Make sure that Wiser is logged into the Wiser app.</string>
    <string name="want_help_3">3) Add Wiser\'s email address below and click on \'send invite\' button.</string>
    <string name="want_help_4">4) Ask Wiser to accept your invitation request. The invitation will appear to the left of the Homescreen.</string>
    <string name="want_help_5">5) That\'s it!</string>
    <string name="input_invitee_name">Enter Wiser\'s name</string>
    <string name="input_your_name">Enter your name</string>
    <string name="email_sent">Email has been sent successfully</string>
    <string name="invite_your_first_wiser">Invite your first wiser</string>
    <string name="to_support_your_close_ones_they_will_need_to_install_the_wiser_simple_launcher_app">To support your close ones
    they will need to install Wiser - simple launcher app</string>
    <string name="title_activity_wiser_mirror">WiserMirrorActivity</string>
    <string name="open_drawer">Open Drawer </string>
    <string name="close_drawer">Close Drawer </string>
    <string name="tool_tip_people_slide">Tap on the \'plus\' \nto add a Contact</string>
    <string name="tool_tip_app_slide">Tap on the \'plus\' \nto add an application</string>
    <string name="tool_tip_app_direction">Tap on the \'plus\' \nto add a direction</string>
    <string name="tool_tip_app_sos">Tap on the \'plus\' \nto add a sos number</string>
    <string name="tool_tip_app_settings">Tap on the \'plus\' \nto add a setting</string>
    <string name="tool_tip_app_reminder">Tap on the \'plus\' \nto add a reminder</string>
    <string name="add">Add</string>
    <string name="add_a_title_reminder">Please add a Reminder\'s title</string>
    <string name="enter_a_destination">Enter a destination</string>
    <string name="pick_a_location">Please pick a location</string>
    <string name="click_here_to_install_theis_app">Click here to install this app</string>
    <string name="user_has_image">User already has an image</string>
    <string name="app_already_exists_in_this_slide">App already exists on this slide</string>
    <string name="no_address">No Address</string>
    <string name="login_error">Can\'t login, Please try again!</string>
    <string name="select_a_favorite_application">Select a favorite application</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="home_number">Home number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="wiser_contact_list">Wiser\'s Contact list</string>
    <string name="your_contact_list">Your Contact list</string>
    <string name="create">Create</string>
    <string name="where_to">Select location</string>
    <string name="destination_title">Create nickname</string>
    <string name="no_place_address">No Location Address</string>
    <string name="place_name">Location Name</string>
    <string name="install_apps">Install Apps</string>
    <string name="insert_destination">Enter address</string>
    <string name="from_wisers_applications">From wiser\'s applications</string>
    <string name="from_googleplay">From Googleplay store</string>
    <string name="from_your_applications">From your applications</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading</string>
    <string name="add_contacts_from">Add Contacts from:</string>
    <string name="add_application">Add application:</string>
    <string name="add_direction">Add direction:</string>
    <string name="add_setting">Add setting:</string>
    <string name="sos_text_1">Create a list  of emergency Contacts.\nTap the SOS  button and we will call\nthrough
    the list until someone\nanswers.And your Wiser will receive\nan sms with your current location.</string>
    <string name="sos_text_2">Tap on the \'+\' to add\n SOS Contact.</string>
    <string name="home_title_apps">Applications</string>
    <string name="home_title_directions">Directions</string>
    <string name="home_title_safe_places">Safe places</string>
    <string name="home_title_sos">SOS</string>
    <string name="favorite_people">Favorite people</string>
    <string name="favorite_ppl">Favorite People</string>
    <string name="add_slides">Add Slides</string>
    <string name="remove_slides">Remove Slides</string>
    <string name="remove_slide">Remove Slide</string>
    <string name="favorite_people_name">FavoritePeople</string>
    <string name="home_title_home">Home</string>
    <string name="sent_from_companion">invite sent</string>
    <string name="received_from_wiser">invite received</string>
    <string name="invited_email_sent">Email Invite Sent</string>
    <string name="rejected">rejected</string>
    <string name="connected">tap to begin</string>
    <string name="invitation_actions_resend">Resend invitation</string>
    <string name="invitation_actions_accept">Accept invitation</string>
    <string name="invitation_actions_remove">Remove from the list</string>
    <string name="invitation_actions_switch">Switch primary helper</string>
    <string name="your_compnion_request_ad_been_approved">Request approved</string>
    <string name="you_cannot_have_more_then_3_slides_of_the_same_type">Sorry you can only have 3 %s slides</string>
    <string name="this_contact_already_exits_in_this_slide">This Contact already exists in this slide</string>
    <string name="this_sos_already_exits_in_this_slide">This sos already exists in this slide</string>
    <string name="please_enter_at_least_one_name_above">Please enter at least one name above</string>
    <string name="please_enter_a_name_and_a_number_above">please enter a name and a number above</string>
    <string name="please_enter_at_least_one_number_home_or_mobile">Please enter a phone number above</string>
    <string name="companion_app_requires_an_active_intenet_conection">Please check your phone`s connectivity, you must be online to update the wiser`s app.</string>
    <string name="setting_already_added">Setting already added,\nPlease add another setting</string>
    <string name="select_a_favorite_contact">Select a favorite Contact</string>
    <string name="search">Search</string>
    <string name="header_button_back">Back</string>
    <string name="header_button_done">Done</string>
    <string name="header_button_edit">Edit</string>
    <string name="header_button_cancel">Cancel</string>
    <string name="header_button_save">Save</string>
    <string name="header_button_close">Close</string>
    <string name="add_slide">Add Slide</string>
    <string name="add_wiser">Connect Wiser</string>
    <string name="contact_list_header">What would you like to add?</string>
    <string name="action_button_delete_contact">Delete Contact</string>
    <string name="contact_edit_name">Edit name</string>
    <string name="contact_add_name">Add name</string>
    <string name="contact_edit_mobile_number">Edit mobile number</string>
    <string name="contact_add_mobile_number">Add mobile number</string>
    <string name="contact_edit_home_number">Edit home number</string>
    <string name="contact_add_home_number">Add home number</string>
    <string name="contact_edit_email">Edit email</string>
    <string name="contact_add_email">Add email</string>
    <string name="contact_edit_picture">Edit picture</string>
    <string name="contact_add_picture">Add picture</string>
    <string name="contact_edit">Edit Contact</string>
    <string name="delete_contact_dialog_title">Delete Contact</string>
    <string name="sos_plus_service">Please upgrade now to Helper PLUS</string>
    <string name="wiser_plus">Purchase</string>
    <string name="home_add_wiser_plus_desc">Wiser Helper is so simple. You see a mirror view of the Wiser Launcher app. Once connected, remotely over the internet, Wiser Helper can:</string>
    <string name="helper_plus1">Add, edit or remove contacts from their smartphone</string>
    <string name="helper_plus2">Add or remove apps</string>
    <string name="helper_plus3">Provide driving directions</string>
    <string name="helper_plus4">Create reminders</string>
    <string name="helper_plus5">Set up emergency SOS numbers</string>
    <string name="helper_plus6">Manage their phone’s settings, such as volume, brightness, wifi, and battery life</string>
    <string name="helper_plus7">Upgrade now and invite your friend or family to enjoy Wiser on their smartphone. </string>
    <string name="create_your_reminder">Create Your Reminder</string>
    <string name="title">Title:</string>
    <string name="set_date">Set Date:</string>
    <string name="set_time">Set Time:</string>
    <string name="Droidserif_Italic">fonts/DroidSerif-Italic.ttf</string>
    <string name="tap_to_record_notes">Tap to record notes</string>
</resources>