<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/nav_view_home"
        android:title="@string/home"
        android:orderInCategory="93"
        app:showAsAction="never"
        android:icon="@drawable/ic_home_black"/>

    <item android:id="@+id/nav_view_invite"
        android:title="@string/invite_kid"
        android:orderInCategory="94"
        app:showAsAction="never"
        android:icon="@drawable/ic_invite_black"/>

    <item android:id="@+id/nav_view_upgrade"
        android:title="@string/upgrade_helper"
        android:orderInCategory="95"
        app:showAsAction="never"
        android:icon="@drawable/ic_upgrade_black"/>


    <item android:id="@+id/nav_view_rate_us"
        android:title="@string/rate_us"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:icon="@drawable/ic_rateus_black"/>


    <item android:id="@+id/nav_view_share"
        android:title="@string/spread_the_love"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:icon="@drawable/ic_love_black"/>


    <item android:id="@+id/nav_view_about"
        android:title="@string/about"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:icon="@drawable/ic_contactus_black"/>

    <item android:id="@+id/nav_view_contact"
        android:title="@string/contact_uss"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:icon="@drawable/ic_email_black"/>

    <item android:id="@+id/nav_view_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_logout_black"/>


</menu>