<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/black"
              android:orientation="vertical">

    <FrameLayout
        android:id="@+id/topFrame"
        android:background="@color/PrimaryDarkColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivWiserIcon"
            android:src="@drawable/companion_app_title_logo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />
    </FrameLayout>

    <com.uiu.helper.views.TextView
        android:textAllCaps="false"
        android:id="@+id/dialog_invitation_actions_button_resend"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/Black"
        app:font_path_from_assets="@string/Droidserif_Italic"
        android:text="@string/companion_app_requires_an_active_intenet_conection"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <Button
            android:id="@+id/no_internet_connection_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/PrimaryDarkColor"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>