<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/llTop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/reminder_slide_title_color"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivWiserIcon"
            android:paddingTop="10dp"
            android:src="@drawable/companion_app_title_logo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/create_your_reminder"
            android:textSize="22dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            />
        <RelativeLayout
            android:layout_toRightOf="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:id="@+id/etTitle"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_centerInParent="true">
                <requestFocus></requestFocus>
            </EditText>
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_date"
            android:gravity="center"
            android:textSize="15dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_toRightOf="@+id/text1"
            android:id="@+id/tvDate"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:src="@drawable/ic_calendar"
            android:layout_toRightOf="@+id/tvDate"


            />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_time"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_toRightOf="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/tvTime"
            android:src="@drawable/ic_time"
            android:gravity="center" />


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:id="@+id/ivMic"
            android:src="@drawable/ic_music"
            android:visibility="visible"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/tvTapToRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_record_notes"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
       android:animateLayoutChanges="true"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/header_button_save"
            android:layout_margin="5dp"
            android:id="@+id/btnSave"
            android:textColor="@color/white"
            android:background="@color/SeaGreen"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/header_button_cancel"
            android:id="@+id/btnCancel"
            android:textColor="@color/white"
            android:background="@color/Gray"
            android:layout_margin="5dp"/>

    </LinearLayout>


</LinearLayout>