<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/topFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/PrimaryColor"
        android:padding="5dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivWiserIcon"
            android:src="@drawable/companion_app_title_logo_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />
        <com.uiu.helper.views.TextView
            android:id="@+id/tvReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sos_plus_service"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivWiserIcon"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:id="@+id/rlContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.uiu.helper.views.TextView
                    android:id="@+id/tvReminderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/home_add_wiser_plus_desc"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp"
                    android:layout_below="@+id/tvReminder"
                    android:layout_toRightOf="@+id/ivWiserIcon"
                    android:gravity="left"
                    android:textColor="@color/Black" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus1"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus2"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus3"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:id="@+id/tvReminderDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus4"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:id="@+id/tvReminderDesc1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus5"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:background="@drawable/circular_drawable"
                        android:layout_width="15dp"
                        android:layout_height="15dp"/>
                    <com.uiu.helper.views.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus6"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.uiu.helper.views.TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textSize="16sp"
                        android:paddingLeft="5dp"
                        android:text="@string/helper_plus7"
                        android:layout_below="@+id/tvReminder"
                        android:layout_toRightOf="@+id/ivWiserIcon"
                        android:gravity="left"
                        android:textColor="@color/Black" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_below="@+id/rlContent"
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnSubscribe"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/wiser_plus"
                android:padding="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_below="@+id/rlContent"
                android:textAllCaps="false"
                android:background="@color/home_slide_title_color"
                android:textColor="@color/white"
                android:layout_gravity="center" />
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/header_button_cancel"
                android:padding="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_below="@+id/rlContent"
                android:textAllCaps="false"
                android:background="@color/sos_slide_title_color"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>